floci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floci
  namespace: floci
spec:
  selector:
    app: floci
  ports:
    - port: 4566
      targetPort: 4566
